--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "personal-portfolio-technigo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hilwynn.github.io/personal-portfolio-technigo",
   "dependencies": {
     "ajv": "^6.5.4",
     "babel-eslint": "^9.0.0",
     "eslint": "^5.6.0",
     "eslint-config-technigo": "^1.5.2",
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.9.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -14,6 +16,8 @@
     "react-scripts": "2.0.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
